test/sema/nonmutating-member-function.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    var i: int;

    def bar() {
        // CHECK: [[@LINE+1]]:31: error: cannot initialize variable of type 'mutable Foo*' with 'Foo*'
        var f: mutable Foo* = this;
    }
}
